# Robocon2026_ws

./: .gitignore  README.md  frames_2025-11-12_08.42.39.gv
src/r1/: CMakeLists.txt  package.xml
src/r1/config/: swervedrive_robot.yaml
src/r1/launch/: display.launch.py  robot.launch.py
src/r1/maps/: test.pgm
src/r1/urdf/: common_properties.xacro  robot_description.urdf.xacro  swervedrive.ros2_control.xacro  swervedrive.xacro
src/r2/: CMakeLists.txt  package.xml
src/r2/config/: mecanum_robot.yaml
src/r2/launch/: robot.launch.py
src/r2/rviz/: mecanum.rviz
src/r2/src/: keyboard_teleop.cpp
src/r2/urdf/: common_properties.xacro  mecanum.ros2_control.xacro  mecanum.xacro  robot_description.urdf.xacro
