cmake_minimum_required(VERSION 3.8)
project(r2)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)

# --- Executable: Keyboard Control ---
add_executable(keyboard_teleop src/keyboard_teleop.cpp)
ament_target_dependencies(keyboard_teleop rclcpp geometry_msgs)

install(TARGETS
  keyboard_teleop
  DESTINATION lib/${PROJECT_NAME}
)
install(
  DIRECTORY urdf launch rviz config
  DESTINATION share/${PROJECT_NAME}/
)


ament_package()
